--- a/style.css
+++ b/style.css
@@ -3,23 +3,29 @@ body{
     background-color: #fff;
     margin: 0 auto;
     border: 1px solid gray;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0 2%;
-    padding-top: 5%;
+    padding: 2% 5%;
+    padding-top: 8%;
     background-color: black;
     color: #fff;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 header h3 {
-    margin:0; 
+    margin:0;
+    border-right: 1px solid #888;
+    border-left: 1px solid #888;
+    padding-right: 120px;
+    padding-left: 120px;
+
+
 }
 
 header a {
