--- a/style.css
+++ b/style.css
@@ -7,27 +7,35 @@ body{
 }
 
 header{
+
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: black;
+    color: #fff;
+}
+header .header-first{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 2% 5%;
-    padding-top: 8%;
-    background-color: black;
-    color: #fff;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    padding-top: 8%;;
 }
 
 header h3 {
     margin:0;
-    border-right: 1px solid #888;
-    border-left: 1px solid #888;
-    padding-right: 120px;
-    padding-left: 120px;
-
-
 }
 
+.btn-bars{
+  padding-top: 1%;
+  padding-right: 2%;
+  border-right: 1px solid #888;
+}
+.contact-link{
+
+border-left: 1px solid #888;
+padding-top: 1%;
+padding-left: 2%;
+}
 header a {
     color: #fff;
 }
